@@ -16,13 +16,14 @@
  */
 package org.apache.kafka.clients.consumer.internals;
 
+import org.apache.kafka.clients.consumer.CloseOptions;
 import org.apache.kafka.clients.consumer.internals.events.BackgroundEventHandler;
 import org.apache.kafka.clients.consumer.internals.events.StreamsOnAllTasksLostCallbackCompletedEvent;
 import org.apache.kafka.clients.consumer.internals.events.StreamsOnAllTasksLostCallbackNeededEvent;
 import org.apache.kafka.clients.consumer.internals.events.StreamsOnTasksAssignedCallbackCompletedEvent;
-import org.apache.kafka.clients.consumer.internals.events.StreamsOnTasksAssignedCallbackNeededEvent;
 import org.apache.kafka.clients.consumer.internals.events.StreamsOnTasksRevokedCallbackCompletedEvent;
 import org.apache.kafka.clients.consumer.internals.events.StreamsOnTasksRevokedCallbackNeededEvent;
+import org.apache.kafka.clients.consumer.internals.events.StreamsTasksAssignedEvent;
 import org.apache.kafka.common.KafkaException;
 import org.apache.kafka.common.MetricName;
 import org.apache.kafka.common.TopicPartition;
@@ -31,17 +32,20 @@ import org.apache.kafka.common.metrics.Metrics;
 import org.apache.kafka.common.protocol.Errors;
 import org.apache.kafka.common.requests.StreamsGroupHeartbeatRequest;
 import org.apache.kafka.common.requests.StreamsGroupHeartbeatResponse;
-import org.apache.kafka.common.utils.LogContext;
 import org.apache.kafka.common.utils.MockTime;
 import org.apache.kafka.common.utils.Time;
+import org.apache.kafka.common.utils.internals.LogContext;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.junit.jupiter.params.provider.ValueSource;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
+import org.mockito.InOrder;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -49,6 +53,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.SortedSet;
@@ -57,12 +62,11 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.apache.kafka.clients.consumer.internals.ConsumerUtils.CONSUMER_METRIC_GROUP_PREFIX;
 import static org.apache.kafka.clients.consumer.internals.ConsumerUtils.COORDINATOR_METRICS_SUFFIX;
 import static org.apache.kafka.common.requests.ShareGroupHeartbeatRequest.LEAVE_GROUP_MEMBER_EPOCH;
-import static org.apache.kafka.common.utils.Utils.mkEntry;
-import static org.apache.kafka.common.utils.Utils.mkMap;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
@@ -72,6 +76,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.argThat;
+import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
@@ -82,6 +87,7 @@ import static org.mockito.Mockito.when;
 public class StreamsMembershipManagerTest {
 
     private static final String GROUP_ID = "test-group";
+    private static final String INSTANCE_ID = "instance-1";
     private static final int MEMBER_EPOCH = 1;
 
     private static final String SUBTOPOLOGY_ID_0 = "subtopology-0";
@@ -111,8 +117,8 @@ public class StreamsMembershipManagerTest {
     private MemberStateListener memberStateListener;
 
     @Captor
-    private ArgumentCaptor<StreamsOnTasksAssignedCallbackNeededEvent> onTasksAssignedCallbackNeededEventCaptor;
-    private int onTasksAssignedCallbackNeededAddCount = 0;
+    private ArgumentCaptor<StreamsTasksAssignedEvent> tasksAssignedEventCaptor;
+    private int tasksAssignedAddCount = 0;
 
     @Captor
     private ArgumentCaptor<StreamsOnTasksRevokedCallbackNeededEvent> onTasksRevokedCallbackNeededEventCaptor;
@@ -124,6 +130,7 @@ public class StreamsMembershipManagerTest {
     public void setup() {
         membershipManager = new StreamsMembershipManager(
             GROUP_ID,
+            Optional.empty(),
             streamsRebalanceData, subscriptionState, backgroundEventHandler,
             new LogContext("test"),
             time,
@@ -165,17 +172,17 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testActiveTasksAreNullInHeartbeatResponse() {
-        testTasksAreNullInHeartbeatResponse(null, Collections.emptyList(), Collections.emptyList());
+        testTasksAreNullInHeartbeatResponse(null, List.of(), List.of());
     }
 
     @Test
     public void testStandbyTasksAreNullInHeartbeatResponse() {
-        testTasksAreNullInHeartbeatResponse(Collections.emptyList(), null, Collections.emptyList());
+        testTasksAreNullInHeartbeatResponse(List.of(), null, List.of());
     }
 
     @Test
     public void testWarmupTasksAreNullInHeartbeatResponse() {
-        testTasksAreNullInHeartbeatResponse(Collections.emptyList(), Collections.emptyList(), null);
+        testTasksAreNullInHeartbeatResponse(List.of(), List.of(), null);
     }
 
     private void testTasksAreNullInHeartbeatResponse(final List<StreamsGroupHeartbeatResponseData.TaskIds> activeTasks,
@@ -214,10 +221,10 @@ public class StreamsMembershipManagerTest {
 
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_0));
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -236,7 +243,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasksSetup, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
@@ -253,10 +260,10 @@ public class StreamsMembershipManagerTest {
             expectedNewPartitionsToAssign
         );
         onTasksRevokedCallbackExecuted.complete(null);
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
     }
 
@@ -275,13 +282,13 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasksSetup, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of(
             new TopicPartition(TOPIC_0, PARTITION_0),
@@ -289,7 +296,7 @@ public class StreamsMembershipManagerTest {
         );
         final Set<TopicPartition> expectedNewPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -312,7 +319,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0), new TopicPartition(TOPIC_0, PARTITION_1)));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasksSetup, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
@@ -330,9 +337,9 @@ public class StreamsMembershipManagerTest {
         );
         onTasksRevokedCallbackExecuted.complete(null);
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
     }
 
@@ -353,7 +360,7 @@ public class StreamsMembershipManagerTest {
             SUBTOPOLOGY_ID_1, List.of(PARTITION_0))
         );
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of(
             new TopicPartition(TOPIC_0, PARTITION_0),
@@ -361,7 +368,7 @@ public class StreamsMembershipManagerTest {
         );
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -381,7 +388,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of());
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -403,13 +410,13 @@ public class StreamsMembershipManagerTest {
         );
         onTasksRevokedCallbackExecuted.complete(null);
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasks,
                 Set.of()
             );
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
     }
 
@@ -428,7 +435,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of());
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -450,13 +457,13 @@ public class StreamsMembershipManagerTest {
         );
         onTasksRevokedCallbackExecuted.complete(null);
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
                 warmupTasks
             );
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
     }
 
@@ -468,7 +475,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithStandbyTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasks,
@@ -477,7 +484,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -492,7 +499,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithStandbyTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasksSetup,
@@ -504,7 +511,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithStandbyTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_1)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasks,
@@ -513,7 +520,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -529,7 +536,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithStandbyTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasksSetup,
@@ -544,13 +551,13 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasks,
                 Set.of()
             );
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -566,7 +573,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithStandbyTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasksSetup,
@@ -581,13 +588,13 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasks,
                 Set.of()
             );
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -607,7 +614,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponseWithStandbyTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasksSetup,
@@ -620,9 +627,9 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -637,7 +644,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithStandbyTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasksSetup,
@@ -649,7 +656,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_1)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -658,7 +665,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -671,7 +678,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -680,7 +687,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -695,7 +702,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -707,7 +714,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_1)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -716,7 +723,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -732,7 +739,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -744,7 +751,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -753,7 +760,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -769,7 +776,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0, PARTITION_1)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -781,7 +788,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_1)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -790,7 +797,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -810,7 +817,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_1)));
         joining();
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -820,7 +827,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_1)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasks,
                 Set.of(),
@@ -829,7 +836,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of(new TopicPartition(TOPIC_0, PARTITION_1));
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -844,7 +851,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithWarmupTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 Set.of(),
@@ -856,7 +863,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithStandbyTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_1)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 Set.of(),
                 standbyTasks,
@@ -865,7 +872,7 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedFullPartitionsToAssign = Set.of();
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         verifyInStateAcknowledgingAfterOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign);
         verifyThatNoTasksHaveBeenRevoked();
     }
@@ -879,7 +886,7 @@ public class StreamsMembershipManagerTest {
 
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasks,
                 Set.of(),
@@ -889,7 +896,9 @@ public class StreamsMembershipManagerTest {
         final Set<TopicPartition> expectedNewPartitionsToAssign = expectedFullPartitionsToAssign;
         verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(expectedFullPartitionsToAssign, expectedNewPartitionsToAssign);
 
-        onTasksAssignedCallbackExecuted.completeExceptionally(new RuntimeException("KABOOM!"));
+        // Assignment is applied before callback is invoked, then callback fails
+        membershipManager.applyAssignment(onTasksAssignedCallbackExecuted.assignedPartitions(), onTasksAssignedCallbackExecuted.addedPartitions());
+        onTasksAssignedCallbackExecuted.future().completeExceptionally(new RuntimeException("KABOOM!"));
 
         verifyInStateReconciling(membershipManager);
         verify(subscriptionState, never()).enablePartitionsAwaitingCallback(any());
@@ -909,7 +918,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -957,7 +966,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -1008,7 +1017,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -1056,7 +1065,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -1082,14 +1091,14 @@ public class StreamsMembershipManagerTest {
             verifyOnAllTasksLostCallbackNeededEventAddedToBackgroundEventHandler();
         onAllTasksLostCallbackExecuted.complete(null);
         membershipManager.maybeRejoinStaleMember();
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasks,
                 Set.of(),
                 Set.of()
             );
 
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
 
         assertNotEquals(MemberState.ACKNOWLEDGING, membershipManager.state());
     }
@@ -1108,7 +1117,7 @@ public class StreamsMembershipManagerTest {
             .thenReturn(Set.of(new TopicPartition(TOPIC_0, PARTITION_0)));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -1134,13 +1143,13 @@ public class StreamsMembershipManagerTest {
 
         onAllTasksLostCallbackExecuted.complete(null);
 
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasks,
                 Set.of(),
                 Set.of()
             );
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
 
         assertNotEquals(MemberState.ACKNOWLEDGING, membershipManager.state());
     }
@@ -1152,7 +1161,7 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testLeaveGroupOnCloseWhenNotInGroup() {
-        testLeaveGroupWhenNotInGroup(membershipManager::leaveGroupOnClose);
+        testLeaveGroupWhenNotInGroup(() -> membershipManager.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.DEFAULT));
     }
 
     @Test
@@ -1162,7 +1171,7 @@ public class StreamsMembershipManagerTest {
             Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
         stable();
@@ -1228,7 +1237,7 @@ public class StreamsMembershipManagerTest {
 
     @Test
     public void testLeaveGroupOnCloseWhenNotInGroupAndFenced() {
-        testLeaveGroupOnCloseWhenNotInGroupAndFenced(membershipManager::leaveGroupOnClose);
+        testLeaveGroupOnCloseWhenNotInGroupAndFenced(() -> membershipManager.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.DEFAULT));
     }
 
     private void testLeaveGroupOnCloseWhenNotInGroupAndFenced(final Supplier<CompletableFuture<Void>> leaveGroup) {
@@ -1254,7 +1263,7 @@ public class StreamsMembershipManagerTest {
             Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasks,
                 Set.of(),
@@ -1271,7 +1280,8 @@ public class StreamsMembershipManagerTest {
         verifyInStatePrepareLeaving(membershipManager);
         final CompletableFuture<Void> onGroupLeftBeforeRevocationCallback = membershipManager.leaveGroup();
         assertEquals(onGroupLeft, onGroupLeftBeforeRevocationCallback);
-        final CompletableFuture<Void> onGroupLeftOnCloseBeforeRevocationCallback = membershipManager.leaveGroupOnClose();
+        final CompletableFuture<Void> onGroupLeftOnCloseBeforeRevocationCallback = 
+                membershipManager.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.DEFAULT);
         assertEquals(onGroupLeft, onGroupLeftOnCloseBeforeRevocationCallback);
         onTasksRevokedCallbackExecuted.complete(null);
         verify(memberStateListener).onGroupAssignmentUpdated(Set.of());
@@ -1303,7 +1313,7 @@ public class StreamsMembershipManagerTest {
             Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasks,
                 Set.of(),
@@ -1312,7 +1322,8 @@ public class StreamsMembershipManagerTest {
 
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
-        final CompletableFuture<Void> onGroupLeft = membershipManager.leaveGroupOnClose();
+        final CompletableFuture<Void> onGroupLeft = 
+                membershipManager.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.DEFAULT);
 
         assertFalse(onGroupLeft.isDone());
         verifyInStateLeaving(membershipManager);
@@ -1321,7 +1332,8 @@ public class StreamsMembershipManagerTest {
         verify(backgroundEventHandler, never()).add(any(StreamsOnTasksRevokedCallbackNeededEvent.class));
         final CompletableFuture<Void> onGroupLeftBeforeHeartbeatRequestGenerated = membershipManager.leaveGroup();
         assertEquals(onGroupLeft, onGroupLeftBeforeHeartbeatRequestGenerated);
-        final CompletableFuture<Void> onGroupLeftOnCloseBeforeHeartbeatRequestGenerated = membershipManager.leaveGroupOnClose();
+        final CompletableFuture<Void> onGroupLeftOnCloseBeforeHeartbeatRequestGenerated = 
+                membershipManager.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.DEFAULT);
         assertEquals(onGroupLeft, onGroupLeftOnCloseBeforeHeartbeatRequestGenerated);
         assertFalse(onGroupLeft.isDone());
         membershipManager.onHeartbeatRequestGenerated();
@@ -1340,6 +1352,81 @@ public class StreamsMembershipManagerTest {
         assertFalse(onGroupLeft.isCompletedExceptionally());
     }
 
+    /**
+     * Test that when unsubscribe/leaveGroup is called during an ongoing reconciliation and the pending
+     * assignment event is completed exceptionally, the member can still rejoin and start
+     * a new reconciliation.
+     */
+    @Test
+    public void testLeaveGroupDuringReconciliationThenRejoin() {
+        setupStreamsRebalanceDataWithOneSubtopologyOneSourceTopic(SUBTOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsRebalanceData.TaskId> activeTasks =
+            Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
+        when(subscriptionState.assignedPartitions()).thenReturn(Set.of());
+        joining();
+
+        // Start reconciliation - assignment event is pending
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
+        final StreamsTasksAssignedEvent pendingAssignmentEvent =
+            verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
+
+        // Call leaveGroup while reconciliation is in progress
+        membershipManager.leaveGroup();
+
+        // Complete the pending assignment event exceptionally (simulating unsubscribe skipping it)
+        pendingAssignmentEvent.future().completeExceptionally(
+            new KafkaException("Assignment event skipped because consumer is unsubscribing"));
+
+        // Complete leave and rejoin
+        membershipManager.onHeartbeatRequestGenerated();
+        Mockito.clearInvocations(backgroundEventHandler);
+        tasksAssignedAddCount = 0;
+        joining();
+
+        // Receive assignment - verify new reconciliation starts
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
+        verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
+    }
+
+    @Test
+    public void testLeaveGroupOnCloseWithRemainInGroupSkipsLeaveHeartbeat() {
+        setupStreamsRebalanceDataWithOneSubtopologyOneSourceTopic(SUBTOPOLOGY_ID_0, TOPIC_0);
+        final Set<StreamsRebalanceData.TaskId> activeTasks =
+            Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
+        joining();
+        reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
+            verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+                activeTasks, Set.of(), Set.of());
+        acknowledging(onTasksAssignedCallbackExecuted);
+
+        final CompletableFuture<Void> onGroupLeft =
+            membershipManager.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.REMAIN_IN_GROUP);
+
+        assertFalse(onGroupLeft.isDone());
+        assertEquals(MemberState.LEAVING, membershipManager.state());
+        assertEquals(CloseOptions.GroupMembershipOperation.REMAIN_IN_GROUP, membershipManager.leaveGroupOperation());
+        verify(backgroundEventHandler, never()).add(any(StreamsOnTasksRevokedCallbackNeededEvent.class));
+
+        membershipManager.onHeartbeatRequestSkipped();
+
+        assertTrue(onGroupLeft.isDone());
+        assertFalse(onGroupLeft.isCompletedExceptionally());
+        verifyInStateUnsubscribed(membershipManager);
+        verify(subscriptionState).unsubscribe();
+    }
+
+    @Test
+    public void testLeaveGroupOnCloseWithRemainInGroupWhenNotInGroup() {
+        setupStreamsRebalanceDataWithOneSubtopologyOneSourceTopic(SUBTOPOLOGY_ID_0, TOPIC_0);
+
+        final CompletableFuture<Void> onGroupLeft =
+            membershipManager.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.REMAIN_IN_GROUP);
+
+        assertTrue(onGroupLeft.isDone());
+        assertFalse(onGroupLeft.isCompletedExceptionally());
+    }
+
     @Test
     public void testOnHeartbeatRequestSkippedWhenInLeaving() {
         setupStreamsRebalanceDataWithOneSubtopologyOneSourceTopic(SUBTOPOLOGY_ID_0, "topic");
@@ -1348,7 +1435,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -1366,6 +1453,48 @@ public class StreamsMembershipManagerTest {
     }
 
     @Test
+    public void testLeaveGroupEpochIsStaticMemberEpochForStaticMember() {
+        try (final Metrics localMetrics = new Metrics(time)) {
+            final StreamsMembershipManager staticMember = new StreamsMembershipManager(
+                GROUP_ID,
+                Optional.of(INSTANCE_ID),
+                streamsRebalanceData, subscriptionState, backgroundEventHandler,
+                new LogContext("test"), time, localMetrics
+            );
+            assertEquals(StreamsGroupHeartbeatRequest.LEAVE_GROUP_STATIC_MEMBER_EPOCH, staticMember.leaveGroupEpoch());
+        }
+    }
+
+    @Test
+    public void testIsLeavingGroupReturnsTrueForStaticMemberWithRemainInGroupOperation() {
+        setupStreamsRebalanceDataWithOneSubtopologyOneSourceTopic(SUBTOPOLOGY_ID_0, "topic");
+        try (final Metrics localMetrics = new Metrics(time)) {
+            final StreamsMembershipManager staticMember = new StreamsMembershipManager(
+                GROUP_ID,
+                Optional.of(INSTANCE_ID),
+                streamsRebalanceData, subscriptionState, backgroundEventHandler,
+                new LogContext("test"), time, localMetrics
+            );
+            staticMember.registerStateListener(memberStateListener);
+            staticMember.onSubscriptionUpdated();
+            staticMember.onConsumerPoll();
+            assertEquals(MemberState.JOINING, staticMember.state());
+            staticMember.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.REMAIN_IN_GROUP);
+            assertEquals(MemberState.LEAVING, staticMember.state());
+            assertTrue(staticMember.isLeavingGroup());
+        }
+    }
+
+    @Test
+    public void testIsLeavingGroupReturnsFalseForDynamicMemberWithRemainInGroupOperation() {
+        setupStreamsRebalanceDataWithOneSubtopologyOneSourceTopic(SUBTOPOLOGY_ID_0, "topic");
+        joining();
+        membershipManager.leaveGroupOnClose(CloseOptions.GroupMembershipOperation.REMAIN_IN_GROUP);
+        assertEquals(MemberState.LEAVING, membershipManager.state());
+        assertFalse(membershipManager.isLeavingGroup());
+    }
+
+    @Test
     public void testOnHeartbeatSuccessWhenInLeaving() {
         setupStreamsRebalanceDataWithOneSubtopologyOneSourceTopic(SUBTOPOLOGY_ID_0, "topic");
         final Set<StreamsRebalanceData.TaskId> activeTasksSetup = Set.of(
@@ -1373,7 +1502,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
                 activeTasksSetup,
                 Set.of(),
@@ -1393,6 +1522,51 @@ public class StreamsMembershipManagerTest {
         assertFalse(future.isCancelled());
         assertFalse(future.isCompletedExceptionally());
         verify(memberStateListener, never()).onMemberEpochUpdated(Optional.of(MEMBER_EPOCH + 1), membershipManager.memberId());
+    }
+
+    @ParameterizedTest
+    @MethodSource("staticMemberLeaveOnCloseOperations")
+    public void testStaticMemberUsesExpectedLeaveEpochOnClose(
+        final CloseOptions.GroupMembershipOperation operation,
+        final int expectedEpoch
+    ) {
+        try (final Metrics localMetrics = new Metrics(time)) {
+            StreamsMembershipManager membershipManagerWithStaticMember = new StreamsMembershipManager(
+                GROUP_ID,
+                Optional.of(INSTANCE_ID),
+                streamsRebalanceData,
+                subscriptionState,
+                backgroundEventHandler,
+                new LogContext("test"),
+                time,
+                localMetrics
+            );
+            membershipManagerWithStaticMember.registerStateListener(memberStateListener);
+            joining(membershipManagerWithStaticMember);
+
+            CompletableFuture<Void> onGroupLeft = membershipManagerWithStaticMember.leaveGroupOnClose(operation);
+
+            assertEquals(MemberState.LEAVING, membershipManagerWithStaticMember.state());
+            assertEquals(expectedEpoch, membershipManagerWithStaticMember.memberEpoch());
+            assertFalse(onGroupLeft.isDone());
+        }
+    }
+
+    private static Stream<Arguments> staticMemberLeaveOnCloseOperations() {
+        return Stream.of(
+            Arguments.of(
+                CloseOptions.GroupMembershipOperation.REMAIN_IN_GROUP,
+                StreamsGroupHeartbeatRequest.LEAVE_GROUP_STATIC_MEMBER_EPOCH
+            ),
+            Arguments.of(
+                CloseOptions.GroupMembershipOperation.DEFAULT,
+                StreamsGroupHeartbeatRequest.LEAVE_GROUP_STATIC_MEMBER_EPOCH
+            ),
+            Arguments.of(
+                CloseOptions.GroupMembershipOperation.LEAVE_GROUP,
+                StreamsGroupHeartbeatRequest.LEAVE_GROUP_MEMBER_EPOCH
+            )
+        );
     }
 
     @Test
@@ -1445,9 +1619,9 @@ public class StreamsMembershipManagerTest {
     public void testOnHeartbeatSuccessWhenInReconciling() {
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(List.of(), MEMBER_EPOCH));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecuted =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecuted =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(Set.of(), Set.of(), Set.of());
-        onTasksAssignedCallbackExecuted.complete(null);
+        completeAssignment(onTasksAssignedCallbackExecuted);
         membershipManager.onHeartbeatRequestGenerated();
 
         membershipManager.onHeartbeatSuccess(makeHeartbeatResponseWithActiveTasks(List.of(), MEMBER_EPOCH));
@@ -1463,7 +1637,7 @@ public class StreamsMembershipManagerTest {
             Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
@@ -1496,7 +1670,7 @@ public class StreamsMembershipManagerTest {
             Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
@@ -1512,7 +1686,7 @@ public class StreamsMembershipManagerTest {
             Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_1)));
         acknowledging(onTasksAssignedCallbackExecutedSetup);
@@ -1607,7 +1781,7 @@ public class StreamsMembershipManagerTest {
             Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
@@ -1621,7 +1795,7 @@ public class StreamsMembershipManagerTest {
             Set.of(new StreamsRebalanceData.TaskId(SUBTOPOLOGY_ID_0, PARTITION_0));
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
         stable();
@@ -1709,7 +1883,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasksSetup, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
         stable();
@@ -1725,7 +1899,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasksSetup, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
 
@@ -1740,7 +1914,7 @@ public class StreamsMembershipManagerTest {
         );
         joining();
         reconcile(makeHeartbeatResponseWithActiveTasks(SUBTOPOLOGY_ID_0, List.of(PARTITION_0)));
-        final CompletableFuture<Void> onTasksAssignedCallbackExecutedSetup =
+        final StreamsTasksAssignedEvent onTasksAssignedCallbackExecutedSetup =
             verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasksSetup, Set.of(), Set.of());
         acknowledging(onTasksAssignedCallbackExecutedSetup);
         stable();
@@ -1770,6 +1944,53 @@ public class StreamsMembershipManagerTest {
         verify(memberStateListener).onMemberEpochUpdated(Optional.empty(), membershipManager.memberId());
         verify(backgroundEventHandler, never()).add(any(StreamsOnAllTasksLostCallbackNeededEvent.class));
         verify(subscriptionState, never()).assignFromSubscribed(Set.of());
+    }
+
+    @Test
+    public void testOnFencedMarksPendingRevocationBeforeCallback() {
+        TopicPartition ownedPartition = new TopicPartition(TOPIC_0, PARTITION_0);
+        Set<TopicPartition> ownedPartitions = Collections.singleton(ownedPartition);
+        when(subscriptionState.assignedPartitions()).thenReturn(ownedPartitions);
+        joining();
+
+        membershipManager.onFenced();
+
+        // Verify markPendingRevocation is called before the callback event is enqueued
+        InOrder inOrder = inOrder(subscriptionState, backgroundEventHandler);
+        inOrder.verify(subscriptionState).markPendingRevocation(ownedPartitions);
+        inOrder.verify(backgroundEventHandler).add(any(StreamsOnAllTasksLostCallbackNeededEvent.class));
+    }
+
+    @Test
+    public void testTransitionToFatalMarksPendingRevocationBeforeCallback() {
+        TopicPartition ownedPartition = new TopicPartition(TOPIC_0, PARTITION_0);
+        Set<TopicPartition> ownedPartitions = Collections.singleton(ownedPartition);
+        when(subscriptionState.assignedPartitions()).thenReturn(ownedPartitions);
+        joining();
+
+        membershipManager.transitionToFatal();
+
+        // Verify markPendingRevocation is called before the callback event is enqueued
+        InOrder inOrder = inOrder(subscriptionState, backgroundEventHandler);
+        inOrder.verify(subscriptionState).markPendingRevocation(ownedPartitions);
+        inOrder.verify(backgroundEventHandler).add(any(StreamsOnAllTasksLostCallbackNeededEvent.class));
+    }
+
+    @Test
+    public void testTransitionToStaleMarksPendingRevocationBeforeCallback() {
+        TopicPartition ownedPartition = new TopicPartition(TOPIC_0, PARTITION_0);
+        Set<TopicPartition> ownedPartitions = Collections.singleton(ownedPartition);
+        when(subscriptionState.assignedPartitions()).thenReturn(ownedPartitions);
+        joining();
+
+        // Trigger poll timer expiry to transition to LEAVING, then STALE on heartbeat generated
+        membershipManager.onPollTimerExpired();
+        membershipManager.onHeartbeatRequestGenerated();
+
+        // Verify markPendingRevocation is called before the callback event is enqueued
+        InOrder inOrder = inOrder(subscriptionState, backgroundEventHandler);
+        inOrder.verify(subscriptionState).markPendingRevocation(ownedPartitions);
+        inOrder.verify(backgroundEventHandler).add(any(StreamsOnAllTasksLostCallbackNeededEvent.class));
     }
 
     @Test
@@ -1950,9 +2171,9 @@ public class StreamsMembershipManagerTest {
         );
 
         final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             MEMBER_EPOCH,
             statuses
         );
@@ -1960,14 +2181,14 @@ public class StreamsMembershipManagerTest {
         membershipManager.onHeartbeatSuccess(response);
         membershipManager.poll(time.milliseconds());
 
-        final CompletableFuture<Void> future = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+        final StreamsTasksAssignedEvent tasksAssignedEvent = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
             Set.of(),
             Set.of(),
             Set.of(),
             false
         );
 
-        future.complete(null);
+        completeAssignment(tasksAssignedEvent);
     }
 
     @Test
@@ -1982,9 +2203,9 @@ public class StreamsMembershipManagerTest {
         );
 
         final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             MEMBER_EPOCH,
             statuses
         );
@@ -1992,14 +2213,14 @@ public class StreamsMembershipManagerTest {
         membershipManager.onHeartbeatSuccess(response);
         membershipManager.poll(time.milliseconds());
 
-        final CompletableFuture<Void> future = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+        final StreamsTasksAssignedEvent tasksAssignedEvent = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
             Set.of(),
             Set.of(),
             Set.of(),
             false
         );
 
-        future.complete(null);
+        completeAssignment(tasksAssignedEvent);
     }
 
     @Test
@@ -2014,9 +2235,9 @@ public class StreamsMembershipManagerTest {
         );
 
         final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             MEMBER_EPOCH,
             statuses
         );
@@ -2024,14 +2245,14 @@ public class StreamsMembershipManagerTest {
         membershipManager.onHeartbeatSuccess(response);
         membershipManager.poll(time.milliseconds());
 
-        final CompletableFuture<Void> future = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+        final StreamsTasksAssignedEvent tasksAssignedEvent = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
             Set.of(),
             Set.of(),
             Set.of(),
             false
         );
 
-        future.complete(null);
+        completeAssignment(tasksAssignedEvent);
     }
 
     @Test
@@ -2046,9 +2267,9 @@ public class StreamsMembershipManagerTest {
         );
 
         final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             MEMBER_EPOCH,
             statuses
         );
@@ -2056,14 +2277,14 @@ public class StreamsMembershipManagerTest {
         membershipManager.onHeartbeatSuccess(response);
         membershipManager.poll(time.milliseconds());
 
-        final CompletableFuture<Void> future = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+        final StreamsTasksAssignedEvent tasksAssignedEvent = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
             Set.of(),
             Set.of(),
             Set.of(),
             false
         );
 
-        future.complete(null);
+        completeAssignment(tasksAssignedEvent);
     }
 
     @Test
@@ -2072,9 +2293,9 @@ public class StreamsMembershipManagerTest {
         joining();
 
         final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             MEMBER_EPOCH,
             null
         );
@@ -2082,14 +2303,14 @@ public class StreamsMembershipManagerTest {
         membershipManager.onHeartbeatSuccess(response);
         membershipManager.poll(time.milliseconds());
 
-        final CompletableFuture<Void> future = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+        final StreamsTasksAssignedEvent tasksAssignedEvent = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
             Set.of(),
             Set.of(),
             Set.of(),
             true
         );
 
-        future.complete(null);
+        completeAssignment(tasksAssignedEvent);
     }
 
     @Test
@@ -2104,9 +2325,9 @@ public class StreamsMembershipManagerTest {
         );
 
         final StreamsGroupHeartbeatResponse response = makeHeartbeatResponse(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             MEMBER_EPOCH,
             statuses
         );
@@ -2114,14 +2335,14 @@ public class StreamsMembershipManagerTest {
         membershipManager.onHeartbeatSuccess(response);
         membershipManager.poll(time.milliseconds());
 
-        final CompletableFuture<Void> future = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+        final StreamsTasksAssignedEvent tasksAssignedEvent = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
             Set.of(),
             Set.of(),
             Set.of(),
             true
         );
 
-        future.complete(null);
+        completeAssignment(tasksAssignedEvent);
     }
 
     @Test
@@ -2130,9 +2351,9 @@ public class StreamsMembershipManagerTest {
         joining();
 
         final StreamsGroupHeartbeatResponse responseWithTasks = makeHeartbeatResponse(
-            Collections.emptyList(),
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
+            List.of(),
             MEMBER_EPOCH,
             null
         );
@@ -2140,13 +2361,13 @@ public class StreamsMembershipManagerTest {
         membershipManager.onHeartbeatSuccess(responseWithTasks);
         membershipManager.poll(time.milliseconds());
 
-        final CompletableFuture<Void> future1 = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+        final StreamsTasksAssignedEvent tasksAssignedEvent1 = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
             Set.of(),
             Set.of(),
             Set.of(),
             true
         );
-        future1.complete(null);
+        completeAssignment(tasksAssignedEvent1);
 
         final List<StreamsGroupHeartbeatResponseData.Status> statuses = List.of(
             new StreamsGroupHeartbeatResponseData.Status()
@@ -2165,13 +2386,13 @@ public class StreamsMembershipManagerTest {
         membershipManager.onHeartbeatSuccess(responseWithoutTasks);
         membershipManager.poll(time.milliseconds());
 
-        final CompletableFuture<Void> future2 = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
+        final StreamsTasksAssignedEvent tasksAssignedEvent2 = verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(
             Set.of(),
             Set.of(),
             Set.of(),
             false
         );
-        future2.complete(null);
+        completeAssignment(tasksAssignedEvent2);
     }
 
     private void verifyThatNoTasksHaveBeenRevoked() {
@@ -2189,8 +2410,10 @@ public class StreamsMembershipManagerTest {
 
     private void verifyInStateReconcilingBeforeOnTaskAssignedCallbackExecuted(Set<TopicPartition> expectedAllPartitionsToAssign,
                                                                               Set<TopicPartition> expectedNewPartitionsToAssign) {
-        verify(subscriptionState).assignFromSubscribedAwaitingCallback(expectedAllPartitionsToAssign, expectedNewPartitionsToAssign);
-        verify(memberStateListener).onGroupAssignmentUpdated(expectedAllPartitionsToAssign);
+        // Assignment is now deferred to app thread via StreamsTasksAssignedEvent,
+        // so assignFromSubscribedAwaitingCallback should NOT be called directly from background thread
+        verify(subscriptionState, never()).assignFromSubscribedAwaitingCallback(expectedAllPartitionsToAssign, expectedNewPartitionsToAssign);
+        verify(memberStateListener, never()).onGroupAssignmentUpdated(expectedAllPartitionsToAssign);
         verify(subscriptionState, never()).enablePartitionsAwaitingCallback(expectedNewPartitionsToAssign);
         verifyInStateReconciling(membershipManager);
     }
@@ -2270,20 +2493,30 @@ public class StreamsMembershipManagerTest {
         assertFalse(membershipManager.isLeavingGroup());
     }
 
-    private CompletableFuture<Void> verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(final Set<StreamsRebalanceData.TaskId> activeTasks,
-                                                                                                          final Set<StreamsRebalanceData.TaskId> standbyTasks,
-                                                                                                          final Set<StreamsRebalanceData.TaskId> warmupTasks) {
+    private StreamsTasksAssignedEvent verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(final Set<StreamsRebalanceData.TaskId> activeTasks,
+                                                                                                            final Set<StreamsRebalanceData.TaskId> standbyTasks,
+                                                                                                            final Set<StreamsRebalanceData.TaskId> warmupTasks) {
         return verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(activeTasks, standbyTasks, warmupTasks, true);
     }
 
-    private CompletableFuture<Void> verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(final Set<StreamsRebalanceData.TaskId> activeTasks,
-                                                                                                          final Set<StreamsRebalanceData.TaskId> standbyTasks,
-                                                                                                          final Set<StreamsRebalanceData.TaskId> warmupTasks,
-                                                                                                          final boolean isGroupReady) {
-        verify(backgroundEventHandler, times(++onTasksAssignedCallbackNeededAddCount)).add(onTasksAssignedCallbackNeededEventCaptor.capture());
-        final StreamsOnTasksAssignedCallbackNeededEvent onTasksAssignedCallbackNeeded = onTasksAssignedCallbackNeededEventCaptor.getValue();
-        assertEquals(makeTaskAssignment(activeTasks, standbyTasks, warmupTasks, isGroupReady), onTasksAssignedCallbackNeeded.assignment());
-        return onTasksAssignedCallbackNeeded.future();
+    private StreamsTasksAssignedEvent verifyOnTasksAssignedCallbackNeededEventAddedToBackgroundEventHandler(final Set<StreamsRebalanceData.TaskId> activeTasks,
+                                                                                                            final Set<StreamsRebalanceData.TaskId> standbyTasks,
+                                                                                                            final Set<StreamsRebalanceData.TaskId> warmupTasks,
+                                                                                                            final boolean isGroupReady) {
+        verify(backgroundEventHandler, times(++tasksAssignedAddCount)).add(tasksAssignedEventCaptor.capture());
+        final StreamsTasksAssignedEvent streamsTasksAssignedEvent = tasksAssignedEventCaptor.getValue();
+        assertEquals(makeTaskAssignment(activeTasks, standbyTasks, warmupTasks, isGroupReady), streamsTasksAssignedEvent.assignment());
+        return streamsTasksAssignedEvent;
+    }
+
+    /**
+     * Simulate the application thread processing the StreamsTasksAssignedEvent:
+     * 1. Apply the assignment (via ApplyAssignmentEvent to background thread)
+     * 2. Complete the callback future
+     */
+    private void completeAssignment(final StreamsTasksAssignedEvent event) {
+        membershipManager.applyAssignment(event.assignedPartitions(), event.addedPartitions());
+        event.future().complete(null);
     }
 
     private CompletableFuture<Void> verifyOnTasksRevokedCallbackNeededEventAddedToBackgroundEventHandler(final Set<StreamsRebalanceData.TaskId> activeTasksToRevoke) {
@@ -2306,8 +2539,8 @@ public class StreamsMembershipManagerTest {
                                         final Set<StreamsRebalanceData.TaskId> standbyTasks,
                                         final Set<StreamsRebalanceData.TaskId> warmupTasks) {
         verify(backgroundEventHandler, never()).add(argThat(a -> {
-            if (a instanceof StreamsOnTasksAssignedCallbackNeededEvent) {
-                return ((StreamsOnTasksAssignedCallbackNeededEvent) a).assignment()
+            if (a instanceof StreamsTasksAssignedEvent) {
+                return ((StreamsTasksAssignedEvent) a).assignment()
                     .equals(makeTaskAssignment(activeTasks, standbyTasks, warmupTasks));
             }
             return false;
@@ -2317,16 +2550,14 @@ public class StreamsMembershipManagerTest {
     private void setupStreamsRebalanceDataWithOneSubtopologyOneSourceTopic(final String subtopologyId,
                                                                            final String topicName) {
         lenient().when(streamsRebalanceData.subtopologies()).thenReturn(
-            mkMap(
-                mkEntry(
-                    subtopologyId,
-                    new StreamsRebalanceData.Subtopology(
-                        Set.of(topicName),
-                        Set.of(),
-                        Collections.emptyMap(),
-                        Collections.emptyMap(),
-                        Collections.emptyList()
-                    )
+            Map.of(
+                subtopologyId,
+                new StreamsRebalanceData.Subtopology(
+                    Set.of(topicName),
+                    Set.of(),
+                    Map.of(),
+                    Map.of(),
+                    List.of()
                 )
             )
         );
@@ -2337,26 +2568,22 @@ public class StreamsMembershipManagerTest {
                                                                 final String subtopologyId2,
                                                                 final String topicName2) {
         lenient().when(streamsRebalanceData.subtopologies()).thenReturn(
-            mkMap(
-                mkEntry(
-                    subtopologyId1,
-                    new StreamsRebalanceData.Subtopology(
-                        Set.of(topicName1),
-                        Set.of(),
-                        Collections.emptyMap(),
-                        Collections.emptyMap(),
-                        Collections.emptyList()
-                    )
+            Map.of(
+                subtopologyId1,
+                new StreamsRebalanceData.Subtopology(
+                    Set.of(topicName1),
+                    Set.of(),
+                    Map.of(),
+                    Map.of(),
+                    List.of()
                 ),
-                mkEntry(
-                    subtopologyId2,
-                    new StreamsRebalanceData.Subtopology(
-                        Set.of(topicName2),
-                        Set.of(),
-                        Collections.emptyMap(),
-                        Collections.emptyMap(),
-                        Collections.emptyList()
-                    )
+                subtopologyId2,
+                new StreamsRebalanceData.Subtopology(
+                    Set.of(topicName2),
+                    Set.of(),
+                    Map.of(),
+                    Map.of(),
+                    List.of()
                 )
             )
         );
@@ -2388,13 +2615,13 @@ public class StreamsMembershipManagerTest {
     private StreamsGroupHeartbeatResponse makeHeartbeatResponseWithStandbyTasks(final String subtopologyId,
                                                                                 final List<Integer> partitions) {
         return makeHeartbeatResponse(
-            Collections.emptyList(),
+            List.of(),
             List.of(
                 new StreamsGroupHeartbeatResponseData.TaskIds()
                     .setSubtopologyId(subtopologyId)
                     .setPartitions(partitions)
             ),
-            Collections.emptyList(),
+            List.of(),
             MEMBER_EPOCH
         );
     }
@@ -2402,8 +2629,8 @@ public class StreamsMembershipManagerTest {
     private StreamsGroupHeartbeatResponse makeHeartbeatResponseWithWarmupTasks(final String subtopologyId,
                                                                                final List<Integer> partitions) {
         return makeHeartbeatResponse(
-            Collections.emptyList(),
-            Collections.emptyList(),
+            List.of(),
+            List.of(),
             List.of(
                 new StreamsGroupHeartbeatResponseData.TaskIds()
                     .setSubtopologyId(subtopologyId)
@@ -2430,7 +2657,7 @@ public class StreamsMembershipManagerTest {
 
     private StreamsGroupHeartbeatResponse makeHeartbeatResponseWithActiveTasks(final List<StreamsGroupHeartbeatResponseData.TaskIds> activeTasks,
                                                                                final int memberEpoch) {
-        return makeHeartbeatResponse(activeTasks, Collections.emptyList(), Collections.emptyList(), memberEpoch);
+        return makeHeartbeatResponse(activeTasks, List.of(), List.of(), memberEpoch);
     }
 
     private StreamsGroupHeartbeatResponse makeHeartbeatResponse(final List<StreamsGroupHeartbeatResponseData.TaskIds> activeTasks,
@@ -2488,14 +2715,20 @@ public class StreamsMembershipManagerTest {
         verifyInStateJoining(membershipManager);
     }
 
+    private void joining(StreamsMembershipManager givenMembershipManager) {
+        givenMembershipManager.onSubscriptionUpdated();
+        givenMembershipManager.onConsumerPoll();
+        verifyInStateJoining(givenMembershipManager);
+    }
+
     private void reconcile(final StreamsGroupHeartbeatResponse response) {
         membershipManager.onHeartbeatSuccess(response);
         membershipManager.poll(time.milliseconds());
         verifyInStateReconciling(membershipManager);
     }
 
-    private void acknowledging(final CompletableFuture<Void> future) {
-        future.complete(null);
+    private void acknowledging(final StreamsTasksAssignedEvent event) {
+        completeAssignment(event);
         verifyInStateAcknowledging(membershipManager);
     }
 
