@@ -21,6 +21,7 @@ import org.apache.kafka.common.message.ConsumerGroupDescribeResponseData;
 import org.apache.kafka.common.message.JoinGroupRequestData;
 import org.apache.kafka.coordinator.common.runtime.KRaftCoordinatorMetadataImage;
 import org.apache.kafka.coordinator.common.runtime.MetadataImageBuilder;
+import org.apache.kafka.coordinator.group.Assertions;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupCurrentMemberAssignmentValue;
 import org.apache.kafka.coordinator.group.generated.ConsumerGroupMemberMetadataValue;
 import org.apache.kafka.coordinator.group.modern.Assignment;
@@ -29,6 +30,8 @@ import org.apache.kafka.image.MetadataImage;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -40,12 +43,17 @@ import java.util.Optional;
 import java.util.OptionalInt;
 import java.util.Set;
 
+import static org.apache.kafka.common.requests.ConsumerGroupHeartbeatRequest.LEAVE_GROUP_STATIC_MEMBER_EPOCH;
 import static org.apache.kafka.coordinator.group.AssignmentTestUtil.mkAssignment;
 import static org.apache.kafka.coordinator.group.AssignmentTestUtil.mkTopicAssignment;
+import static org.apache.kafka.coordinator.group.Utils.toAssignmentWithEpochs;
 import static org.apache.kafka.coordinator.group.modern.consumer.ConsumerGroupMember.classicProtocolListFromJoinRequestProtocolCollection;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
 
 public class ConsumerGroupMemberTest {
+    private static final Logger LOG = LoggerFactory.getLogger(ConsumerGroupMemberTest.class);
+    private static final String GROUP_ID = "test-group";
 
     @Test
     public void testNewMember() {
@@ -63,10 +71,10 @@ public class ConsumerGroupMemberTest {
             .setSubscribedTopicNames(Arrays.asList("foo", "bar"))
             .setSubscribedTopicRegex("regex")
             .setServerAssignorName("range")
-            .setAssignedPartitions(mkAssignment(
-                mkTopicAssignment(topicId1, 1, 2, 3)))
-            .setPartitionsPendingRevocation(mkAssignment(
-                mkTopicAssignment(topicId2, 4, 5, 6)))
+            .setAssignedPartitions(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId1, 1, 2, 3)), 10))
+            .setPartitionsPendingRevocation(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId2, 4, 5, 6)), 9))
             .setClassicMemberMetadata(new ConsumerGroupMemberMetadataValue.ClassicMemberMetadata()
                 .setSupportedProtocols(toClassicProtocolCollection("range")))
             .build();
@@ -81,8 +89,14 @@ public class ConsumerGroupMemberTest {
         assertEquals(Set.of("bar", "foo"), member.subscribedTopicNames());
         assertEquals("regex", member.subscribedTopicRegex());
         assertEquals("range", member.serverAssignorName().get());
-        assertEquals(mkAssignment(mkTopicAssignment(topicId1, 1, 2, 3)), member.assignedPartitions());
-        assertEquals(mkAssignment(mkTopicAssignment(topicId2, 4, 5, 6)), member.partitionsPendingRevocation());
+        assertEquals(toAssignmentWithEpochs(mkAssignment(mkTopicAssignment(topicId1, 1, 2, 3)), 10), member.assignedPartitions());
+        assertEquals(toAssignmentWithEpochs(mkAssignment(mkTopicAssignment(topicId2, 4, 5, 6)), 9), member.partitionsPendingRevocation());
+        assertEquals(Integer.valueOf(10), member.assignmentEpoch(topicId1, 1));
+        assertEquals(Integer.valueOf(10), member.assignmentEpoch(topicId1, 2));
+        assertEquals(Integer.valueOf(10), member.assignmentEpoch(topicId1, 3));
+        assertEquals(Integer.valueOf(9), member.pendingRevocationEpoch(topicId2, 4));
+        assertEquals(Integer.valueOf(9), member.pendingRevocationEpoch(topicId2, 5));
+        assertEquals(Integer.valueOf(9), member.pendingRevocationEpoch(topicId2, 6));
         assertEquals(
             new ConsumerGroupMemberMetadataValue.ClassicMemberMetadata()
                 .setSupportedProtocols(toClassicProtocolCollection("range")),
@@ -107,10 +121,10 @@ public class ConsumerGroupMemberTest {
             .setSubscribedTopicNames(Arrays.asList("foo", "bar"))
             .setSubscribedTopicRegex("regex")
             .setServerAssignorName("range")
-            .setAssignedPartitions(mkAssignment(
-                mkTopicAssignment(topicId1, 1, 2, 3)))
-            .setPartitionsPendingRevocation(mkAssignment(
-                mkTopicAssignment(topicId2, 4, 5, 6)))
+            .setAssignedPartitions(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId1, 1, 2, 3)), 10))
+            .setPartitionsPendingRevocation(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId2, 4, 5, 6)), 9))
             .setClassicMemberMetadata(new ConsumerGroupMemberMetadataValue.ClassicMemberMetadata()
                 .setSupportedProtocols(toClassicProtocolCollection("range")))
             .build();
@@ -126,10 +140,10 @@ public class ConsumerGroupMemberTest {
             .setSubscribedTopicNames(Arrays.asList("foo", "bar"))
             .setSubscribedTopicRegex("regex")
             .setServerAssignorName("range")
-            .setAssignedPartitions(mkAssignment(
-                mkTopicAssignment(topicId1, 1, 2, 3)))
-            .setPartitionsPendingRevocation(mkAssignment(
-                mkTopicAssignment(topicId2, 4, 5, 6)))
+            .setAssignedPartitions(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId1, 1, 2, 3)), 10))
+            .setPartitionsPendingRevocation(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId2, 4, 5, 6)), 9))
             .setClassicMemberMetadata(new ConsumerGroupMemberMetadataValue.ClassicMemberMetadata()
                 .setSupportedProtocols(toClassicProtocolCollection("range")))
             .build();
@@ -153,10 +167,10 @@ public class ConsumerGroupMemberTest {
             .setSubscribedTopicNames(Arrays.asList("foo", "bar"))
             .setSubscribedTopicRegex("regex")
             .setServerAssignorName("range")
-            .setAssignedPartitions(mkAssignment(
-                mkTopicAssignment(topicId1, 1, 2, 3)))
-            .setPartitionsPendingRevocation(mkAssignment(
-                mkTopicAssignment(topicId2, 4, 5, 6)))
+            .setAssignedPartitions(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId1, 1, 2, 3)), 10))
+            .setPartitionsPendingRevocation(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId2, 4, 5, 6)), 9))
             .setClassicMemberMetadata(new ConsumerGroupMemberMetadataValue.ClassicMemberMetadata()
                 .setSupportedProtocols(toClassicProtocolCollection("range")))
             .build();
@@ -238,13 +252,40 @@ public class ConsumerGroupMemberTest {
                 .setPartitions(Arrays.asList(3, 4, 5))));
 
         ConsumerGroupMember member = new ConsumerGroupMember.Builder("member-id")
-            .updateWith(record)
+            .updateWith(LOG, GROUP_ID, record)
             .build();
 
         assertEquals(10, member.memberEpoch());
         assertEquals(9, member.previousMemberEpoch());
-        assertEquals(mkAssignment(mkTopicAssignment(topicId1, 0, 1, 2)), member.assignedPartitions());
-        assertEquals(mkAssignment(mkTopicAssignment(topicId2, 3, 4, 5)), member.partitionsPendingRevocation());
+        assertEquals(toAssignmentWithEpochs(mkAssignment(mkTopicAssignment(topicId1, 0, 1, 2)), 10), member.assignedPartitions());
+        assertEquals(toAssignmentWithEpochs(mkAssignment(mkTopicAssignment(topicId2, 3, 4, 5)), 10), member.partitionsPendingRevocation());
+    }
+
+    @Test
+    public void testUpdateWithConsumerGroupCurrentMemberAssignmentValueWithNegativeEpoch() {
+        Uuid topicId1 = Uuid.randomUuid();
+        Uuid topicId2 = Uuid.randomUuid();
+
+        ConsumerGroupCurrentMemberAssignmentValue record = new ConsumerGroupCurrentMemberAssignmentValue()
+            .setMemberEpoch(LEAVE_GROUP_STATIC_MEMBER_EPOCH) // -2
+            .setPreviousMemberEpoch(5)
+            .setAssignedPartitions(List.of(new ConsumerGroupCurrentMemberAssignmentValue.TopicPartitions()
+                .setTopicId(topicId1)
+                .setPartitions(Arrays.asList(0, 1, 2))))
+            .setPartitionsPendingRevocation(List.of(new ConsumerGroupCurrentMemberAssignmentValue.TopicPartitions()
+                .setTopicId(topicId2)
+                .setPartitions(Arrays.asList(3, 4, 5))));
+
+        ConsumerGroupMember member = new ConsumerGroupMember.Builder("member-id")
+            .updateWith(LOG, GROUP_ID, record)
+            .build();
+
+        assertEquals(-2, member.memberEpoch());
+        assertEquals(5, member.previousMemberEpoch());
+
+        // Assignment epochs should be 0, not -2.
+        assertEquals(toAssignmentWithEpochs(mkAssignment(mkTopicAssignment(topicId1, 0, 1, 2)), 0), member.assignedPartitions());
+        assertEquals(toAssignmentWithEpochs(mkAssignment(mkTopicAssignment(topicId2, 3, 4, 5)), 0), member.partitionsPendingRevocation());
     }
 
     @ParameterizedTest(name = "{displayName}.withClassicMemberMetadata={0}")
@@ -282,7 +323,7 @@ public class ConsumerGroupMemberTest {
         assignmentMap.put(topicId4, new HashSet<>(assignedPartitions));
         Assignment targetAssignment = new Assignment(assignmentMap);
         ConsumerGroupMember member = new ConsumerGroupMember.Builder(memberId)
-            .updateWith(record)
+            .updateWith(LOG, GROUP_ID, record)
             .setClientId(clientId)
             .setInstanceId(instanceId)
             .setRackId(rackId)
@@ -293,8 +334,11 @@ public class ConsumerGroupMemberTest {
                 .setSupportedProtocols(toClassicProtocolCollection("range")) : null)
             .build();
 
-        ConsumerGroupDescribeResponseData.Member actual = member.asConsumerGroupDescribeMember(targetAssignment, new KRaftCoordinatorMetadataImage(metadataImage));
-        ConsumerGroupDescribeResponseData.Member expected = new ConsumerGroupDescribeResponseData.Member()
+        var actual = member.asConsumerGroupDescribeMember(
+            targetAssignment,
+            new KRaftCoordinatorMetadataImage(metadataImage)
+        );
+        var expected = new ConsumerGroupDescribeResponseData.Member()
             .setMemberId(memberId)
             .setMemberEpoch(epoch)
             .setClientId(clientId)
@@ -304,12 +348,19 @@ public class ConsumerGroupMemberTest {
             .setSubscribedTopicNames(new ArrayList<>(subscribedTopicNames))
             .setSubscribedTopicRegex(subscribedTopicRegex)
             .setAssignment(
+                // The assignment should include both assigned partitions and
+                // partitions pending revocation.
                 new ConsumerGroupDescribeResponseData.Assignment()
-                    .setTopicPartitions(List.of(new ConsumerGroupDescribeResponseData.TopicPartitions()
-                        .setTopicId(topicId1)
-                        .setTopicName("topic1")
-                        .setPartitions(assignedPartitions)
-                    ))
+                    .setTopicPartitions(new ArrayList<>(List.of(
+                        new ConsumerGroupDescribeResponseData.TopicPartitions()
+                            .setTopicId(topicId1)
+                            .setTopicName("topic1")
+                            .setPartitions(assignedPartitions),
+                        new ConsumerGroupDescribeResponseData.TopicPartitions()
+                            .setTopicId(topicId2)
+                            .setTopicName("topic2")
+                            .setPartitions(Arrays.asList(3, 4, 5))
+                    )))
             )
             .setTargetAssignment(
                 new ConsumerGroupDescribeResponseData.Assignment()
@@ -322,7 +373,56 @@ public class ConsumerGroupMemberTest {
             )
             .setMemberType(withClassicMemberMetadata ? (byte) 0 : (byte) 1);
 
+        // Sort to avoid order dependency from HashMap iteration.
+        Assertions.normalizeAssignment(actual.assignment());
+        Assertions.normalizeAssignment(expected.assignment());
+
         assertEquals(expected, actual);
+    }
+
+    @Test
+    public void testAsConsumerGroupDescribeMemberWithSameTopicPendingRevocation() {
+        var topicId1 = Uuid.randomUuid();
+        var metadataImage = new MetadataImageBuilder()
+            .addTopic(topicId1, "topic1", 6)
+            .build();
+
+        // Assigned partitions [0, 1] and partitions pending revocation [2] share the same topic.
+        var record = new ConsumerGroupCurrentMemberAssignmentValue()
+            .setMemberEpoch(5)
+            .setPreviousMemberEpoch(4)
+            .setAssignedPartitions(List.of(
+                new ConsumerGroupCurrentMemberAssignmentValue.TopicPartitions()
+                    .setTopicId(topicId1)
+                    .setPartitions(Arrays.asList(0, 1))
+            ))
+            .setPartitionsPendingRevocation(List.of(
+                new ConsumerGroupCurrentMemberAssignmentValue.TopicPartitions()
+                    .setTopicId(topicId1)
+                    .setPartitions(List.of(2))
+            ));
+
+        var memberId = Uuid.randomUuid().toString();
+        var member = new ConsumerGroupMember.Builder(memberId)
+            .updateWith(LOG, GROUP_ID, record)
+            .build();
+
+        var actual = member.asConsumerGroupDescribeMember(
+            null,
+            new KRaftCoordinatorMetadataImage(metadataImage)
+        );
+
+        // The assignment should merge both assigned and pending revocation for the same topic.
+        Assertions.normalizeAssignment(actual.assignment());
+        assertEquals(
+            List.of(
+                new ConsumerGroupDescribeResponseData.TopicPartitions()
+                    .setTopicId(topicId1)
+                    .setTopicName("topic1")
+                    .setPartitions(Arrays.asList(0, 1, 2))
+            ),
+            actual.assignment().topicPartitions()
+        );
     }
 
     @Test
@@ -344,7 +444,7 @@ public class ConsumerGroupMemberTest {
                 .setTopicId(Uuid.randomUuid())
                 .setPartitions(Arrays.asList(0, 1, 2))));
         ConsumerGroupMember member = new ConsumerGroupMember.Builder(memberId.toString())
-            .updateWith(record)
+            .updateWith(LOG, GROUP_ID, record)
             .build();
 
         ConsumerGroupDescribeResponseData.Member expected = new ConsumerGroupDescribeResponseData.Member()
@@ -372,6 +472,38 @@ public class ConsumerGroupMemberTest {
             toClassicProtocolCollection("range"),
             classicProtocolListFromJoinRequestProtocolCollection(protocols)
         );
+    }
+
+    @Test
+    public void testAssignedAndPendingRevocationEpoch() {
+        Uuid topicId1 = Uuid.randomUuid();
+        Uuid topicId2 = Uuid.randomUuid();
+        Uuid unassignedTopicId = Uuid.randomUuid();
+
+        ConsumerGroupMember member = new ConsumerGroupMember.Builder("member-id")
+            .setAssignedPartitions(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId1, 1, 2, 3)), 10))
+            .setPartitionsPendingRevocation(toAssignmentWithEpochs(mkAssignment(
+                mkTopicAssignment(topicId2, 4, 5, 6)), 9))
+            .build();
+
+        assertEquals(10, member.assignmentEpoch(topicId1, 1));
+        assertEquals(10, member.assignmentEpoch(topicId1, 2));
+        assertEquals(10, member.assignmentEpoch(topicId1, 3));
+        assertNull(member.pendingRevocationEpoch(topicId1, 1));
+        assertNull(member.pendingRevocationEpoch(topicId1, 2));
+        assertNull(member.pendingRevocationEpoch(topicId1, 3));
+
+        assertEquals(9, member.pendingRevocationEpoch(topicId2, 4));
+        assertEquals(9, member.pendingRevocationEpoch(topicId2, 5));
+        assertEquals(9, member.pendingRevocationEpoch(topicId2, 6));
+        assertNull(member.assignmentEpoch(topicId2, 4));
+        assertNull(member.assignmentEpoch(topicId2, 5));
+
+        assertNull(member.assignmentEpoch(topicId1, 10));
+        assertNull(member.pendingRevocationEpoch(topicId2, 10));
+        assertNull(member.assignmentEpoch(unassignedTopicId, 0));
+        assertNull(member.pendingRevocationEpoch(unassignedTopicId, 0));
     }
 
     private List<ConsumerGroupMemberMetadataValue.ClassicProtocol> toClassicProtocolCollection(String name) {
